Add ServiceSinkhole.jni_getFileDescriptorFromSocket